scene part completed
